# prepis

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
.kiro/specs/s3-upload-progress-bar/: design.md  requirements.md  tasks.md
.kiro/specs/video-transcription-cli/: design.md  requirements.md  tasks.md
src/: error.rs  main.rs  models.rs  progress.rs  utils.rs
src/aws/: client.rs  mod.rs  s3.rs  transcribe.rs
src/file/: mod.rs  validation.rs  writing.rs
