[package]
name = "prepis"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96"
aws-sdk-transcribe = "1.79"
tokio = { version = "1.23", features = ["full"] }
thiserror = "1.0"
