[package]
name = "prepis"
version = "0.2.1"
edition = "2024"
description = "A command line utility that uses Amazon Transcribe to create video transcriptions"
authors = ["Darko Mesaros <d@rko.rs>"]
license = "MIT OR Apache-2.0"
keywords = ["video", "transcription", "subtitles", "aws"]
categories = ["command-line-utilities"]
readme = "README.md"
homepage = "https://rup12.net"
repository = "https://github.com/darko-mesaros/prepis"
exclude = [
"img/*"
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96"
aws-sdk-transcribe = "1.79"
tokio = { version = "1.23", features = ["full"] }
thiserror = "1.0"
reqwest = "0.11"
serde_json = "1.0"
indicatif = "0.17"
tokio-stream = "0.1"
futures-util = "0.3"
atty = "0.2"
